loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:2: error: ';' expected but ')' found.
  avance());
          ^